--- a/pitchPerfect/Base.lproj/Main.storyboard
+++ b/pitchPerfect/Base.lproj/Main.storyboard
@@ -73,13 +73,105 @@
                     <view key="view" contentMode="scaleToFill" id="lNq-t0-R32">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="SKh-BE-Ldm">
+                                <rect key="frame" x="0.0" y="64" width="375" height="539"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="X6F-ap-9Dl">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="179.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahX-5k-Ep8" userLabel="Slow">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="179.5"/>
+                                                <state key="normal" image="Slow"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="1Mf-sc-Ka6" eventType="touchUpInside" id="H48-3U-IfE"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zNf-Cz-FTS" userLabel="Fast">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="179.5"/>
+                                                <state key="normal" image="Fast"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="1Mf-sc-Ka6" eventType="touchUpInside" id="BhV-pd-lY0"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Umb-Fe-d4V">
+                                        <rect key="frame" x="0.0" y="179.5" width="375" height="180"/>
+                                        <subviews>
+                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DUR-Mp-4Y9" userLabel="Chipmunk">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="180"/>
+                                                <state key="normal" image="HighPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="1Mf-sc-Ka6" eventType="touchUpInside" id="RSl-xf-4b9"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7j-SL-qrZ" userLabel="Darth Vader">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="180"/>
+                                                <state key="normal" image="LowPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="1Mf-sc-Ka6" eventType="touchUpInside" id="isx-gU-T4U"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="5Dh-Cs-A87">
+                                        <rect key="frame" x="0.0" y="359.5" width="375" height="179.5"/>
+                                        <subviews>
+                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pm8-Hh-96J" userLabel="Echo">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="179.5"/>
+                                                <state key="normal" image="Echo"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="1Mf-sc-Ka6" eventType="touchUpInside" id="GSH-fC-Xbk"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VEc-23-o7J" userLabel="Reverb">
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="179.5"/>
+                                                <state key="normal" image="Reverb"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="1Mf-sc-Ka6" eventType="touchUpInside" id="zib-if-0ES"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WmE-BK-CBR">
+                                <rect key="frame" x="155" y="603" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="DTf-yV-1jo"/>
+                                    <constraint firstAttribute="width" constant="64" id="dfm-BB-LJq"/>
+                                </constraints>
+                                <state key="normal" image="Stop"/>
+                                <connections>
+                                    <action selector="stopButtonPressed:" destination="1Mf-sc-Ka6" eventType="touchUpInside" id="rcD-XD-H1n"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hGj-rl-UPg" firstAttribute="bottom" secondItem="WmE-BK-CBR" secondAttribute="bottom" id="XzS-SM-1lb"/>
+                            <constraint firstItem="hGj-rl-UPg" firstAttribute="trailing" secondItem="SKh-BE-Ldm" secondAttribute="trailing" id="YlW-vF-Huv"/>
+                            <constraint firstItem="hGj-rl-UPg" firstAttribute="bottom" secondItem="SKh-BE-Ldm" secondAttribute="bottom" constant="64" id="dAP-C4-W5d"/>
+                            <constraint firstItem="WmE-BK-CBR" firstAttribute="centerX" secondItem="lNq-t0-R32" secondAttribute="centerX" id="g9w-YL-d9h"/>
+                            <constraint firstItem="SKh-BE-Ldm" firstAttribute="leading" secondItem="hGj-rl-UPg" secondAttribute="leading" id="hnH-yx-20W"/>
+                            <constraint firstItem="SKh-BE-Ldm" firstAttribute="top" secondItem="hGj-rl-UPg" secondAttribute="top" id="lSz-b0-Gt9"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="hGj-rl-UPg"/>
                     </view>
+                    <connections>
+                        <outlet property="chipmunkButton" destination="DUR-Mp-4Y9" id="ijI-hb-k3e"/>
+                        <outlet property="echoButton" destination="pm8-Hh-96J" id="9mY-Bt-I36"/>
+                        <outlet property="rabbitButton" destination="zNf-Cz-FTS" id="9Hl-g5-RSk"/>
+                        <outlet property="reverbButton" destination="VEc-23-o7J" id="46a-Q1-ToV"/>
+                        <outlet property="snailButton" destination="ahX-5k-Ep8" id="toD-5C-6Uc"/>
+                        <outlet property="stopButton" destination="WmE-BK-CBR" id="szc-5H-w5K"/>
+                        <outlet property="vaderButton" destination="h7j-SL-qrZ" id="vep-8V-nJ9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fXc-Ma-lox" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1878" y="134"/>
+            <point key="canvasLocation" x="1719" y="134"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="B5X-PL-hmV">
@@ -101,7 +193,13 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Echo" width="90" height="90"/>
+        <image name="Fast" width="90" height="90"/>
+        <image name="HighPitch" width="90" height="90"/>
+        <image name="LowPitch" width="90" height="90"/>
         <image name="Record" width="155" height="155"/>
+        <image name="Reverb" width="90" height="90"/>
+        <image name="Slow" width="90" height="90"/>
         <image name="Stop" width="155" height="155"/>
     </resources>
 </document>
